Fix button alignments.

--- a/src/app/user/instance-list/card/card.component.scss
+++ b/src/app/user/instance-list/card/card.component.scss
@@ -129,6 +129,7 @@
     line-height: 16px;
     border: 1px solid #d3d3d3;
     background: #f9f9f9;
+    height: 31px;
 
     &:focus,
     &:active {
@@ -216,10 +217,8 @@
 .instance-access {
     align-items: baseline;
     justify-content: center;
-    display: flex;
 
     .instance-access-btn {
-        font-weight: 600;
         white-space: nowrap;
         vertical-align: middle;
         cursor: pointer;
@@ -232,6 +231,7 @@
         padding: 5px 15px;
         font-size: 12px;
         line-height: 16px;
+        height: 31px;
 
         &:focus {
             outline: 0;
@@ -474,40 +474,4 @@
 }
 
 
-.instance-delete-btn {
-
-    font-weight: 600;
-    white-space: nowrap;
-    vertical-align: middle;
-    cursor: pointer;
-    user-select: none;
-    border: none;
-    border-radius: 0.25em;
-    appearance: none;
-    color: #cb2431;
-    background-color: white;
-    padding: 5px 5px;
-    font-size: 12px;
-    line-height: 16px;
-
-    &:focus {
-        outline: 0;
-    }
-
-    &:disabled {
-        color: #ccc;
-
-        &:hover {
-            background: #fff;
-            cursor: default;
-        }
-    }
-
-    &:hover {
-        color: #fff;
-        background-color: #cb2431;
-        background-image: linear-gradient(-180deg, #de4450 0%, #cb2431 90%);
-        border-color: rgba(27, 31, 35, 0.5);
-    }
-}
 
